# super-seo-foundation

./: INSTALL.md  PUBLISHING.md  README.md  SKILL.md  product.json
agents/: openai.yaml
examples/: README.md
references/modules/: seo-audit.md  seo-google.md  seo-schema.md
references/toolkit/agents/: seo-dataforseo.md  seo-geo.md  seo-google.md  seo-image-gen.md  seo-schema.md  seo-visual.md
references/toolkit/docs/: ARCHITECTURE.md  COMMANDS.md  INSTALLATION.md  MCP-INTEGRATION.md  TROUBLESHOOTING.md
references/toolkit/docs/superpowers/plans/: 2026-03-13-github-audit-fixes.md
references/toolkit/extensions/banana/: README.md  install.sh  uninstall.sh
references/toolkit/extensions/banana/agents/: seo-image-gen.md
references/toolkit/extensions/banana/docs/: BANANA-SETUP.md
references/toolkit/extensions/banana/references/: gemini-models.md  mcp-tools.md  presets.md  prompt-engineering.md  seo-image-presets.md
references/toolkit/extensions/banana/scripts/: setup_mcp.py  validate_setup.py
references/toolkit/extensions/dataforseo/: README.md  install.ps1  install.sh  uninstall.sh
references/toolkit/extensions/dataforseo/agents/: seo-dataforseo.md
references/toolkit/hooks/: pre-commit-seo-check.sh  validate-schema.py
references/toolkit/resources/agents/: seo-technical.md
references/toolkit/resources/skills/: seo-geo.md  seo-technical.md
scripts/: fetch_page.py  fetch_page_alt1.py  google_auth.py  google_report.py  keyword_planner.py  nlp_analyze.py  pyproject.toml  requirements.txt  robots_checker.py  youtube_search.py
(+3 files in other folders)
